# plottify

./: .gitignore  LICENSE.txt  README.md  setup.cfg  setup.py
examples/: lineplot.py  scatterplot.py
plottify/: __init__.py  plottify.py
plottify.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_import.py
