[metadata]
name = plottify
version = 1.0
description = Plottify
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/andrewcharlesjones/plottify
author = Andy Jones
author_email = ajones788@gmail.com
license = MIT
license_file = LICENSE.txt
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
download_url = https://github.com/andrewcharlesjones/plottify/archive/refs/tags/v01.tar.gz

[options]
packages = find:
install_requires =
    matplotlib
    numpy
python_requires = >=3.6

[options.packages.find]
exclude =
    tests*
